<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:riv_oval="true"
            tools:src="@drawable/ic_profile_image_sample"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="kani 11/100"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/screen_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:text="\@baerkani"/>

                <TextView
                    android:id="@+id/following_you_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/element_spacing_small"
                    android:layout_marginStart="@dimen/element_spacing_small"
                    android:text="@string/following_you"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/element_spacing_normal"
        android:textColor="?android:textColorPrimary"
        tools:text="#ixd #designer #日常 a deeply happy kuma"/>


    <LinearLayout
        android:id="@+id/location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/element_spacing_normal">

        <org.mariotaku.wtf.view.ColorFilterImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_action_location"
            app:colorFilter="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/element_spacing_small"
            android:layout_marginStart="@dimen/element_spacing_small"
            android:singleLine="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="?android:textColorPrimary"
            tools:text="到處都是"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/url_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/element_spacing_normal">

        <org.mariotaku.wtf.view.ColorFilterImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_action_web"
            app:colorFilter="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/element_spacing_small"
            android:layout_marginStart="@dimen/element_spacing_small"
            android:autoLink="web"
            android:singleLine="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="?android:textColorPrimary"
            tools:text="https://twitter.com/baerkani"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/created_at_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/element_spacing_normal">

        <org.mariotaku.wtf.view.ColorFilterImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_action_time"
            app:colorFilter="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/element_spacing_small"
            android:layout_marginStart="@dimen/element_spacing_small"
            android:singleLine="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="?android:textColorPrimary"
            tools:text="November 2011"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_button_size"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:splitMotionEvents="false">

        <LinearLayout
            android:id="@+id/followers_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/element_spacing_small">

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="2.9K"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/followers"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friends_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/element_spacing_small">

            <TextView
                android:id="@+id/friends_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="600"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/following"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorites_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/element_spacing_small">

            <TextView
                android:id="@+id/favorites_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="90"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/favorites"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listed_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/element_spacing_small">

            <TextView
                android:id="@+id/listed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/listed"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groups_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/element_spacing_small"
            android:visibility="gone">

            <TextView
                android:id="@+id/groups_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                tools:text="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/groups"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/status_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_spacing_normal"
        android:layout_marginStart="@dimen/element_spacing_normal"
        android:paddingBottom="@dimen/element_spacing_normal"
        android:paddingTop="@dimen/element_spacing_normal"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="?android:textColorSecondary"
        android:textStyle="bold"
        tools:text="141K Tweets"/>
</LinearLayout>